@@ -206,6 +206,7 @@ national-literals:			ok
 hexadecimal-national-literals:		unconformable
 national-character-literals:		unconformable
 acu-literals:			unconformable
+hp-octal-literals:			unconformable
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
