@@ -207,7 +207,9 @@ hexadecimal-boolean:		unconformable
 national-literals:			ok
 hexadecimal-national-literals:		ok
 national-character-literals:		unconformable
-acu-literals:			ok
+# TO-DO: Add separate config option for H"..." to be unsupported,numeric(rm/mf),non-numeric
+acu-literals:			unconformable
+hp-octal-literals:			unconformable
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
