@@ -211,7 +211,9 @@ hexadecimal-boolean:			unconformable
 national-literals:			unconformable
 hexadecimal-national-literals:		unconformable
 national-character-literals:		unconformable
-acu-literals:			unconformable  # TO-DO: Add separate config option for H"..."
+# TO-DO: Add separate config option for H"..." to be unsupported,numeric(rm/mf),non-numeric
+acu-literals:			unconformable
+hp-octal-literals:			unconformable
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
