@@ -214,6 +214,7 @@ national-literals:			ok
 hexadecimal-national-literals:		unconformable
 national-character-literals:		unconformable
 acu-literals:				unconformable
+hp-octal-literals:			unconformable
 word-continuation:			obsolete	# even for literals (as it added concatenation of literals by &)!
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
