@@ -478,6 +478,7 @@ test.conf: missing definitions:
 	no definition of 'national-literals'
 	no definition of 'hexadecimal-national-literals'
 	no definition of 'national-character-literals'
+	no definition of 'hp-octal-literals'
 	no definition of 'acu-literals'
 	no definition of 'word-continuation'
 	no definition of 'not-exception-before-exception'
